@@ -6,7 +6,7 @@ add equivalent to "subsWithNA" to reclassify
 --- development version
 new function 'select' for selecting spatial subsets by drawing on plot (map)
 new function 'barplot' for RasterLayer objects
-new function 'scale' for Raster* objects
+new function 'scale' for Raster* objects (suggested by Agustin Lobo)
 new functions to coerce to and from big.matrix objects: as(x, 'big.matrix') and raster(x) or brick(x)
 raster now uses 'igraph' instead of 'igraph0' (functions gridDistance and clump)
 renamed function 'compare' to 'compareRaster' (to avoid name hiding by the igraph package)
@@ -18,6 +18,7 @@ new option 'setStatistics=FALSE' for writing to some GDAL files (geoTiff in part
 Added argument "gridded=TRUE" for plot(RasterLayer, RasterLayer), to show counts for intervals (suggested by Agustin Lobo)
 Fixed bug in sampleRandom with "rowcol=TRUE" (reported by Agustin Lobo)
 Fixed bug with RAT tables in native format (reported by Joseph Steward)
+Fixed corner case bug with extract/polygons df=TRUE (reported by Jon Olav Skoien)
 Added big.matrix as a "driver" (file format). This is experimental (and not documented).
 raster now attempts to interpret the CRS from netcdf files
 
